--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+* {
+	margin:0;
+	padding:0;
+}
+
+body::before {
+		content:"";
+		position:fixed;
+		z-index:-100;
+		width:100%;
+		height:100%;
+		background-color:#14C2CC;
+		background-image:
+		radial-gradient(circle farthest-side at top right, transparent, #0c0c45), radial-gradient(ellipse farthest-corner at 0% 100%, transparent, #825283);
+		animation:bg-change 15s infinite;
+}
+
+@keyframes bg-change {
+	0%, 100% {
+		filter:hue-rotate(0deg);
+	}
+	50% {
+		filter:hue-rotate(-45deg);
+	}
+}
+
 body{
   font-family: 'Open Sans', sans-serif;
-  background-color: #30336b;
+  /* background-color: #00000; */
 }
 
 #movies img, #movie img{
@@ -28,7 +54,7 @@ body{
     position: relative;
     /*perspective: 20px;*/
   }
-  
+
   .suggestions li {
     background: white;
     list-style: none;
@@ -41,19 +67,21 @@ body{
     justify-content: space-between;
     text-transform: capitalize;
   }
-  
+
+
   .suggestions li:nth-child(even) {
     transform: perspective(100px) rotateX(3deg) translateY(2px) scale(1.001);
     background: linear-gradient(to bottom,  #ffffff 0%,#EFEFEF 100%);
   }
-  
+
   .suggestions li:nth-child(odd) {
     transform: perspective(100px) rotateX(-3deg) translateY(3px);
     background: linear-gradient(to top,  #ffffff 0%,#EFEFEF 100%);
   }
 
   .well img{
-    border-radius: 5px;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
     transition: 0.5s all ease;
   }
 
@@ -62,6 +90,20 @@ body{
     color: white;
     font-size: 0.9em;
     padding-top: 10px;
+  }
+
+  .anime-title{
+    margin: auto;
+    background-color: blueviolet;
+    font-size: auto;
+    padding-top: 10px;
+    width: 85%;
+		height: 45px;
+		border-top-left-radius: 10px;
+		border-top-right-radius: 10px;
+
+
+    text-align: center;
   }
 
   .movie-listing:hover {
@@ -75,18 +117,6 @@ body{
   .search-year {
     color: #434343;
     font-size: 0.9em;
-  }
-
-  /* branding */
-
-  a#brand:hover {
-    color: #a3a3a3;
-  }
-
-  a#brand {
-      text-decoration: none;
-      cursor: pointer;
-      color: #fff;
   }
 
   /* Search bar */
@@ -108,59 +138,22 @@ body{
     background-origin: content-box;
 }
 
-.main-links{
-  display: flex;
+.genreSearchButton{
+  margin-top: 3px;
+  float:right;  
+  height: 34px;
+  display: block;
+  width:170px;
+
+  border-radius: 20px;
+  transition-duration: 0.5s;
+  font-size: 100%;
+}
+.genreSearchButton:hover{
+  font-size: 110%
 }
 
-#favouriteLinks {
-  margin: 20px auto;
-  text-align: center;
-  cursor: pointer;
-  display: inline;
-  flex: 1;
-  border: 1.5px solid;
-  border-radius: 25px;
-  padding: 10px;
-  max-width: 210px;
-}
-
-
-
-/* Favourites */
-
-.delegatedFave {
-  position: absolute;
-  bottom: 6%;
-  right: 12%;
-}
-
-/* Socials */
-
-.socials {
-  flex: 1;
-  position: fixed;
-  padding: 10px 10px 37px 10px;
-  right: 25px;
-  bottom: 5px;
-  background-color: #30336b;
-}
-
-@media (max-width: 1400px){
-  .socials{
-   display: none; 
-  }
-}
-
-#github, #instagram{
-  padding: 5px
-}
-
-.socials a {
-  text-decoration: none;
-  color: #fff;
-}
-
-/* movie search */
+/* Anime search */
 
 .well.text-center {
   padding: 10px 0px;
@@ -173,36 +166,22 @@ body{
   margin-top: 25px;
 }
 
-.randomMovie{
-  margin: 20px;
-  text-align: center;
-  cursor: pointer;
-  text-decoration: underline;
-  display: inline;
-  flex: 1;
-}
-a.no-link-color:link,a.no-link-color:visited,a.no-link-color:active,a.no-link-color:hover{
-  color:#fff;
-}
-
-.fa-star{
-  color: #f9ca24;
-}
-
+/*this is the box on hover for each media entry*/
 .middle {
-  position: absolute;
+  position: relative;
   top: 50;
-  bottom: 0;
+  bottom: 90px;
   left: 0;
   right: 0;
   height: 25%;
-  width: 77%;
+  width: 85%;
   opacity: 0;
   transition: 0.5s ease;
   background-color: #eb4d4b;
   margin: 0 auto;
   margin-bottom: 95px;
   border-radius: 10px;
+  bottom: ;
 }
 
 @media (max-width: 992px){
@@ -223,6 +202,42 @@ a.no-link-color:link,a.no-link-color:visited,a.no-link-color:active,a.no-link-co
   }
 }
 
+		.action_button1{
+			position:absolute;
+			bottom:0px;
+			left: 0px;
+			border-bottom-left-radius: 10px;
+			width: 50%;
+			height: 50%;
+			background: #eb4d4b;
+			word-wrap: break-word;
+			color: white;
+			transition-property: background;
+			transition-duration: 0.25s;
+		}
+		.action_button1:hover{
+			background: #ff3300;
+		}
+
+
+		.action_button2{
+			position:absolute;
+			bottom:0px;
+			right: 0px;
+			border-bottom-right-radius: 10px;
+			width: 50%;
+			height: 50%;
+			background: #eb4d4b;
+			word-wrap: break-word;
+			color: white;
+			transition-property: background;
+			transition-duration: 0.25s;
+		}
+
+		.action_button2:hover{
+			background: #ff3300;
+		}
+
 @media (max-width: 768px){
   .middle {
     width: 75%;
@@ -236,7 +251,7 @@ a.no-link-color:link,a.no-link-color:visited,a.no-link-color:active,a.no-link-co
 }
 
 .well:hover img {
-  opacity: 0.2;
+  opacity: 0.5
 }
 
 .well:hover .middle {
@@ -248,27 +263,12 @@ a.no-link-color:link,a.no-link-color:visited,a.no-link-color:active,a.no-link-co
   margin-top: 130px;
 }
 
-#theForce{
-  height: 150px;
-  width: 150px;
-  position: relative;
-  flex: 1;
-}
 
 .hide{
   display: none;
 }
 
-#favouriteLinks:hover {
-  background-color: #eb4d4b;
-  border: 1.5px solid #eb4d4b;
-  color: #000;
-  transition: 0.5s all ease;
-}
 
-#favouriteLinks:hover a {
-  color: #000;
-}
 
 @media (max-width: 768px){
   #favouriteLinks{
@@ -284,9 +284,6 @@ a.no-link-color:link,a.no-link-color:visited,a.no-link-color:active,a.no-link-co
   }
 }
 
-#favouriteLinks:hover #default {
-  color: #000;
-}
 
 #default{
   color: #fff;
@@ -305,27 +302,14 @@ img#specificPage {
   margin: 90px 10px 30px 10px;
   min-height: 430px;
   min-width: 200px;
+  max-width: 303px;
+
 }
 
 @media (max-width: 768px){
   img#specificPage{
     margin: 25px;
   }
-}
-
-.list-group-item {
-  position: relative;
-  display: block;
-  padding: 0.9rem 1.25rem;
-  margin-bottom: -1px;
-  background-color: #686de0;
-  color: #fff;
-  border: 0px;
-  transition: all 0.6s ease;
-}
-
-.list-group-item:hover{
-  background-color: #4834d4;
 }
 
 @media (max-width: 500px){
@@ -358,9 +342,6 @@ div#plot {
   }
 }
 
-div#movie {
-  margin-top: 50px;
-}
 
 #genBtn {
   margin: 20px auto;
@@ -372,16 +353,10 @@ div#movie {
   border-radius: 25px;
   padding: 10px;
   max-width: 210px;
-  background-color: transparent;
+  background-color: Grey;
   color: #fff;
 }
 
-#genBtn:hover {
-  background-color: #eb4d4b;
-  border: 1.5px solid #eb4d4b;
-  color: #000;
-  transition: 0.5s all ease;
-}
 
 h3#plot{
   margin-left: 25px;
@@ -394,10 +369,22 @@ h3#plot{
   }
 }
 
-h2#plotHeader {
-  margin-bottom: 35px;
+.col-md-8
+{
+  margin-top: 85px;
 }
 
-div#specMovie {
-  margin-top: 50px;
+.buttons {
+  width: 200px;
+  margin: 0 auto;
+  display: inline;}
+
+.action_btn {
+  width: 200px;
+  margin: 0 auto;
+  display: inline;}
+
+#multi_option {
+  max-width: 100% ;
+  border-radius: 5px  ;
 }
